<resources>
    <string name="app_name">Icafe Employee</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="history">Lịch sử</string>
    <string name="notification">Thông báo</string>
    <string name="account">Tài khoản</string>
    <string name="recharge_request">Yêu cầu nạp tiền</string>
    <string name="total_money">Tổng tiền</string>
    <string name="workstation">Máy trạm</string>
    <string name="see_all">Xem tất cả</string>
    <string name="login">Đăng nhập</string>
    <string name="username">Tên đăng nhập</string>
    <string name="login_hint">Chứa 4 ký tự trở lên (a-z, 0-9)</string>
    <string name="password">Mật khẩu</string>
    <string name="forget_pass_underline"><u>Quên mật khẩu</u></string>
    <string name="forget_pass">Quên mật khẩu</string>
    <string name="launcher">Launcher</string>
    <string name="forget_pass_message">Nhập địa chỉ email được liên kết với tài khoản của bạn và chúng tôi sẽ gửi cho bạn thông tin mật khẩu mới qua email.</string>
    <string name="send_request">Gửi yêu cầu</string>
    <string name="email">Email</string>
    <string name="back_to_login"><u>Trở về đăng nhập</u></string>
    <string name="forget_pass_success_message">Bạn vừa gửi yêu cầu khôi phục mật khẩu thành công. Vui lòng kiểm tra email để lấy lại mật khẩu mới. Xin cảm ơn!</string>
    <string name="OK">OK</string>
    <string name="invalid_password">Mật khẩu không hợp lệ</string>
    <string name="invalid_email">Email không hợp lệ</string>
    <string name="invalid_username">Tên tài khoản không hợp lệ</string>
    <string name="current_password">Mật khẩu hiện tại</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="re_enter_new_pass">Nhập lại mật khẩu mới</string>
    <string name="change_pass">Đổi mật khẩu</string>
    <string name="reset_pass">Đổi mật khẩu</string>
    <string name="invalid_current_password">Mật khẩu cũ không hợp lệ</string>
    <string name="invalid_new_password">Mật khẩu mới không hợp lệ</string>
    <string name="invalid_current_and_new_pass">Mật khẩu mới không được trùng mật khẩu cũ</string>
    <string name="invalid_new_and_confirm_pass">Mật khẩu nhập lại không khớp</string>
    <string name="ws_ready">Sẵn sàng</string>
    <string name="ws_used">Đang sử dụng</string>
    <string name="ws_maintenance">Đang bảo trì</string>
    <string name="ws_error">Mất kết nối</string>
    <string name="search_computer_hint">Nhập tên máy,...</string>
    <string name="list_ws">Danh sách máy trạm</string>

</resources>
