<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/launcherScreen">

    <action
        android:id="@+id/action_login"
        app:destination="@id/loginScreen" />

    <action
        android:id="@+id/action_home"
        app:destination="@id/homeScreen" />

    <fragment
        android:id="@+id/launcherScreen"
        android:name="vn.ekingdom.mobile.icafeemployee.ui.launcher.LauncherFragment"
        tools:layout="@layout/fragment_launcher"
        android:label="@string/launcher"
        />

    <fragment
        android:id="@+id/loginScreen"
        android:name="vn.ekingdom.mobile.icafeemployee.ui.account.login.LoginFragment"
        tools:layout="@layout/fragment_login"
        android:label="@string/login"
        >
        <action
            android:id="@+id/action_loginScreen_to_homeScreen"
            app:destination="@id/homeScreen"
            app:popUpTo="@id/loginScreen"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            />

        <action
            android:id="@+id/action_login_to_forgot_pass"
            app:destination="@id/nav_forgot_pass"
            />

    </fragment>

    <include app:graph="@navigation/nav_forgot_pass"/>

    <fragment
        android:id="@+id/homeScreen"
        android:name="vn.ekingdom.mobile.icafeemployee.ui.home.HomeFragment"
        tools:layout="@layout/fragment_home"
        android:label="@string/home"
        >

        <action
            android:id="@+id/action_home_to_search"
            app:destination="@id/searchScreen" />

    </fragment>

    <fragment
        android:id="@+id/searchScreen"
        android:name="vn.ekingdom.mobile.icafeemployee.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search"
        />


</navigation>