<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTopMargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.09"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgIcon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guidelineTopMargin"
            app:layout_constraintWidth_percent="0.2"
            app:srcCompat="@drawable/logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp30"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/forget_pass"
            android:textAllCaps="true"
            android:textColor="#000"
            android:textSize="@dimen/sp16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgIcon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvForgetPassMessage"
            style="@style/Widget.TextView.Large"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp30"
            android:layout_marginTop="@dimen/dp24"
            android:layout_marginEnd="@dimen/dp30"
            android:text="@string/forget_pass_message"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUserName"
            style="@style/Widget.TextView.Login.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp40"
            android:text="@string/username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvForgetPassMessage" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtUserName"
            style="@style/Widget.EditText.Login"
            android:layout_width="match_parent"
            android:drawableEnd="@drawable/ic_icinputname"
            android:hint="@string/login_hint"
            app:layout_constraintTop_toBottomOf="@id/tvUserName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmail"
            style="@style/Widget.TextView.Login.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtUserName" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtEmail"
            style="@style/Widget.EditText.Login"
            android:layout_width="match_parent"
            android:drawableEnd="@drawable/ic_icinputemail"
            android:hint="@string/login_hint"
            app:layout_constraintTop_toBottomOf="@id/tvEmail" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSendRequest"
            style="@style/Widget.AppCompat.Button.FULL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp40"
            android:background="@drawable/corner_solid_primary_5dp"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/send_request"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtEmail"
            app:layout_constraintWidth_percent="0.5" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBackToLogin"
            style="@style/Widget.TextView.Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:autoLink="all"
            android:fontFamily="@font/montserrat_medium"
            android:linksClickable="false"
            android:padding="@dimen/dp8"
            android:selectAllOnFocus="false"
            android:text="@string/back_to_login"
            android:textColor="@color/lightColorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSendRequest" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="tvUserName,edtUserName,tvEmail,edtEmail,tvBackToLogin"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>