<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >

    <com.ekingdom.common.view.EKToolbar
        android:id="@+id/ekToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/lightColorPrimary"
        app:title="@string/reset_pass"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCurrentPass"
        style="@style/Widget.TextView.Login.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp40"
        android:text="@string/current_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ekToolbar"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtCurrentPass"
        style="@style/Widget.EditText.Login"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:hint="@string/login_hint"
        app:layout_constraintTop_toBottomOf="@id/tvCurrentPass"
        tools:layout_editor_absoluteX="30dp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgCurrentPass"
        style="@style/Image_End_EditText"
        android:clickable="true"
        app:srcCompat="@drawable/ic_icshowpass"
        android:background="?attr/actionBarItemBackground"
        app:layout_constraintEnd_toEndOf="@id/edtCurrentPass"
        app:layout_constraintTop_toTopOf="@id/edtCurrentPass"
        app:layout_constraintBottom_toBottomOf="@id/edtCurrentPass"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNewPassword"
        style="@style/Widget.TextView.Login.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20"
        android:text="@string/new_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtCurrentPass" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtNewPassword"
        style="@style/Widget.EditText.Login"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:hint="@string/login_hint"
        app:layout_constraintTop_toBottomOf="@id/tvNewPassword" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgEndNewPassword"
        style="@style/Image_End_EditText"
        android:clickable="true"
        app:srcCompat="@drawable/ic_icshowpass"
        android:background="?attr/actionBarItemBackground"
        app:layout_constraintEnd_toEndOf="@id/edtNewPassword"
        app:layout_constraintTop_toTopOf="@id/edtNewPassword"
        app:layout_constraintBottom_toBottomOf="@id/edtNewPassword"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvConfirmNewPassword"
        style="@style/Widget.TextView.Login.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20"
        android:text="@string/re_enter_new_pass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtNewPassword" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtConfirmNewPassword"
        style="@style/Widget.EditText.Login"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:hint="@string/login_hint"
        app:layout_constraintTop_toBottomOf="@id/tvConfirmNewPassword" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgEndConfirmNewPassword"
        style="@style/Image_End_EditText"
        android:clickable="true"
        app:srcCompat="@drawable/ic_icshowpass"
        android:background="?attr/actionBarItemBackground"
        app:layout_constraintEnd_toEndOf="@id/edtConfirmNewPassword"
        app:layout_constraintTop_toTopOf="@id/edtConfirmNewPassword"
        app:layout_constraintBottom_toBottomOf="@id/edtConfirmNewPassword"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnChangePass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.FULL"
        android:background="@drawable/corner_solid_primary_5dp"
        android:layout_marginTop="@dimen/dp30"
        android:text="@string/change_pass"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintTop_toBottomOf="@id/edtConfirmNewPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>